# Graph_Algorithms

./: .gitmodules  CMakeLists.txt  README.md  run_visualization.py
include/: edge.hpp  graph.hpp  logger.hpp  logging.hpp  vertex.hpp
src/: edge.tpp  generators.tpp  graph.tpp  graph_methods.cpp  main.cpp  traversal.cpp  vertex.tpp
src/algorithms/: bfs.cpp  bfs.tpp  coloring.tpp  components.tpp  connected_components.tpp  dfs.cpp  dfs.tpp  dijkstra.tpp  generators.tpp  shortest_paths_unweighted.tpp
tests/: basic_tests.cpp  benchmark_results.csv  bfs_tests.cpp  coloring_tests.cpp  components_tests.cpp  dfs_tests.cpp  dijkstra_tests.cpp  generators_tests.cpp  perfomance_tests.cpp  shortest_paths_tests.cpp
tests/files/: bfs_parameters.json  components.json  dfs_parameters.json  dijkstra_parameters.json  dijkstra_results.json
visualization/: bfs_visualization.py  dfs_visualization.py  dijkstra_visualization.py  find_components.py  graph_visualization.py  graph_visualization_static.py  greedy_coloring_visualization.py  perfomance_plots.py  run_manim.sh  run_plots.sh  shortest_paths_visualization.py  visualize.py
visualization/media/videos/graph_visualization/720p30/partial_movie_files/MovingVertices/: partial_movie_file_list.txt
